updated styles for media queries

--- a/main.html
+++ b/main.html
@@ -22,7 +22,9 @@
 		<section id="section-a" class="grid">
 			<div class="content-wrap">
 				<h2 class="content-title">Web & Application Development</h2>
+				<div class="content-text">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit est porro voluptates blanditiis beatae accusamus molestiae esse quo dignissimos, molestias error doloribus dicta nobis sapiente cumque facilis, provident obcaecati, iusto corporis enim. Quibusdam quaerat dolorem, excepturi doloremque in, unde dicta.</p>
+			</div>
 			</div>
 		</section>
 
